// file: proto/gcommon/v1/common/error_info.proto
// version: 1.0.0
// guid: ba36f77a-0141-43fc-a77e-fde479168a40

edition = "2023";

package common.v1;

import "google/protobuf/go_features.proto";
import "buf/validate/validate.proto";


option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/common";

// ErrorInfo provides structured error details for log entries
message ErrorInfo {
  // Error message
  string message = 1 [(buf.validate.field).string.min_len = 1];

  // Error type or class name
  string type = 2 [(buf.validate.field).string.min_len = 1];

  // Full stack trace if available
  string stack_trace = 3 [(buf.validate.field).string.min_len = 1];

  // Application-specific error code
  string code = 4 [(buf.validate.field).string.min_len = 1];

  // Arbitrary key/value context information
  map<string, string> context = 5;

  // Nested causes for error propagation
  repeated ErrorInfo causes = 6 [(buf.validate.field).repeated.min_items = 1];
}
