// file: proto/gcommon/v2/web/cache_strategy.proto
// version: 1.0.1
// guid: a2c186e6-9e1e-402b-802f-39fc7b4dfc0d
//
// CacheStrategy defines caching policies for HTTP handlers.
edition = "2023";

package common.v2;

import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/commonpb/v2";

// Available caching policies for responses.
enum CacheStrategy {
  CACHE_STRATEGY_UNSPECIFIED = 0;
  // Do not cache responses.
  CACHE_STRATEGY_NONE = 1;
  // Use in-memory caching only.
  CACHE_STRATEGY_MEMORY = 2;
  // Use distributed cache (e.g., Redis).
  CACHE_STRATEGY_DISTRIBUTED = 3;
  // Use external CDN cache.
  CACHE_STRATEGY_CDN = 4;
}
