// filepath: pkg/metrics/proto/enums/comparison_operator.proto
// file: metrics/proto/enums/comparison_operator.proto
//
// Enum definitions for metrics module
// TODO: Implement actual protobuf definitions
//
edition = "2023";

package gcommon.v1.metrics;

import "google/protobuf/go_features.proto";

option go_package = "github.com/jdfalk/gcommon/pkg/metrics/proto;metricspb";
option features.(pb.go).api_level = API_OPAQUE;

/**
 * ComparisonOperator defines operators used for metric comparisons and alerts.
 * Used in alert conditions to compare metric values against thresholds.
 */
enum ComparisonOperator {
  // Unspecified operator (default)
  COMPARISON_OPERATOR_UNSPECIFIED = 0;

  // Equal to
  COMPARISON_OPERATOR_EQUAL = 1;

  // Not equal to
  COMPARISON_OPERATOR_NOT_EQUAL = 2;

  // Greater than
  COMPARISON_OPERATOR_GREATER_THAN = 3;

  // Greater than or equal to
  COMPARISON_OPERATOR_GREATER_THAN_OR_EQUAL = 4;

  // Less than
  COMPARISON_OPERATOR_LESS_THAN = 5;

  // Less than or equal to
  COMPARISON_OPERATOR_LESS_THAN_OR_EQUAL = 6;

  // Contains (for string/text metrics)
  COMPARISON_OPERATOR_CONTAINS = 7;

  // Does not contain (for string/text metrics)
  COMPARISON_OPERATOR_NOT_CONTAINS = 8;

  // Matches regex pattern
  COMPARISON_OPERATOR_REGEX = 9;

  // Does not match regex pattern
  COMPARISON_OPERATOR_NOT_REGEX = 10;
}
